<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false">

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:columnCount="2"
        android:rowCount="3" >

        <LinearLayout
            android:id="@+id/amphibians_overview_activity_ll_dendrobates"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/amphibians_overview_activity_ib_dendrobates"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_ib_invertebrates" />

            <TextView
                android:id="@+id/amphibians_overview_activity_tv_dendrobates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amphibians_overview_activity_dendrobates_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amphibians_overview_activity_ll_hyla"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/amphibians_overview_activity_ib_hyla"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_ib_turtles" />

            <TextView
                android:id="@+id/amphibians_overview_activity_tv_hyla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amphibians_overview_activity_hyla_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amphibians_overview_activity_ll_salamander"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/amphibians_overview_activity_ib_salamander"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_ib_turtles" />

            <TextView
                android:id="@+id/amphibians_overview_activity_tv_salamander"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amphibians_overview_activity_salamander_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amphibians_overview_activity_ll_toads"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/amphibians_overview_activity_ib_toads"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_ib_turtles" />

            <TextView
                android:id="@+id/amphibians_overview_activity_tv_toads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amphibians_overview_activity_toad_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/amphibians_overview_activity_ll_div"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton
                android:id="@+id/amphibians_overview_activity_ib_div"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_ib_turtles" />

            <TextView
                android:id="@+id/amphibians_overview_activity_tv_div"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/div_text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>



    </GridLayout>
</ScrollView>